--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,68 @@
 </head>
 <body>
     <h1 id="title">web form</h1>
-    <p id="main"></p>
-    <input type="text" name="user" id="user" placeholder="user..." value="pepito">
+
+    <div>
+        <input type="text" name="user" id="user" placeholder="user...">
+        <button onClick="checkInputText()">send</button>
+        <span id="span1">result</span>
+    </div>
+    <hr>
+
+    <div>
+        <input type="password" name="passw" id="passw" placeholder="password...">
+        <button onClick="checkInputPassw()">send</button>
+        <span id="span2">result</span>
+    </div>
+    <hr>
+
+    <div>
+        <input type="radio" name="food" id="pizza" value="pizza">
+        <label for="pizza">pizza</label><br><br>
+        <input type="radio" name="food" id="hamburger" value="hamburger">
+        <label for="hamburger">hamburger</label><br><br>
+        <input type="radio" name="food" id="pupusa" value="pupusa" checked>
+        <label for="pupusa">pupusa</label><br><br>
+
+        <button onClick="checkInputRadio()">send</button>
+        <span id="span3">result</span>
+    </div>
+    <hr>
+
+    <div>
+        <input type="checkbox" name="vehicle" id="bike" value="bike">
+        <label for="bike">bike</label><br><br>
+        <input type="checkbox" name="vehicle" id="car" value="car">
+        <label for="car">car</label><br><br>
+        <input type="checkbox" name="vehicle" id="boat" value="boat">
+        <label for="boat">boat</label><br><br>
+
+        <button onClick="checkInputCheckBox()">send</button>
+        <span id="span4">result</span>
+    </div>
+    <hr>
+
+    <div>
+        <input type="color" name="color" id="color">
+        <button onClick="checkInputColor()">send</button>
+        <span id="span5">result</span>
+    </div>
+    <hr>
+
+    <div>
+        <input type="time" id="time" name="time">
+        <button onClick="checkInputTime()">send</button>
+        <span id="span6">result</span>
+    </div>
+    <hr>
+
+    <div>
+        <input type="datetime-local" id="birthdaytime" name="birthdaytime">
+        <button onClick="checkInputDateTimeLocal()">send</button>
+        <span id="span7">result</span>
+    </div>
+    <hr>
+
     <script src="/static/script.js"></script>
 </body>
 </html>
